# stm32g431-cmakefile

./: CMakeLists.txt  Makefile  README.md
chip/: stm32g431.svd
lib/CMSIS/Core/Include/: core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm33.h  core_cm7.h  core_sc000.h  core_sc300.h
lib/CMSIS/Core/Template/ARMv8-M/: main_s.c  tz_context.c
lib/CMSIS/Core_A/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  core_ca.h
lib/CMSIS/Core_A/Source/: irq_ctrl_gic.c
lib/CMSIS/Device/ST/STM32G4xx/Include/: stm32g431xx.h  stm32g441xx.h  stm32g471xx.h  stm32g473xx.h  stm32g483xx.h  stm32g484xx.h  stm32gbk1cb.h
lib/CMSIS/Device/ST/STM32G4xx/Source/Templates/: system_stm32g4xx.c
lib/DSP/: matrix.c  matrix.h
src/: main.c  main.h
src/hardware/: nucleo.c  nucleo.h  stm32g4xx_it.c
src/hardware/core/: stm32g4xx_it.c
